force-app/main/default/objects/Application_Document__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <formula>Checklist_Item__r.Application__c</formula>
    <label>Application</label>
    <type>Text</type>
</CustomField>