force-app/main/default/objects/Application_Document__c/fields/Checklist_Item__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Item__c</fullName>
    <label>Checklist Item</label>
    <referenceTo>Checklist_Item__c</referenceTo>
    <relationshipLabel>Application Documents</relationshipLabel>
    <relationshipName>Application_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>