force-app/main/default/objects/Application_Document__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document</label>
    <referenceTo>Document__c</referenceTo>
    <relationshipLabel>Application Documents</relationshipLabel>
    <relationshipName>Application_Documents</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>