force-app/main/default/objects/Application_Document__c/fields/Linked_By__c.field-meta.xml
<CustomField>
    <fullName>Linked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>