force-app/main/default/objects/Application_Document__c/fields/Linked_Date__c.field-meta.xml
<CustomField>
    <fullName>Linked_Date__c</fullName>
    <label>Linked Date</label>
    <type>Date</type>
</CustomField>